--- a/numeral-system-practice.html
+++ b/numeral-system-practice.html
@@ -3,23 +3,7 @@
 	<head>
 	<title>Hier kun je binaire, octale en hexadecimale getallen oefenen!</title>
 	<style>
-		body {
-			background-color: #e0ffff;
-			font-family: Verdana;
-			color: #00003f;
-			font-size: 2vw;
-		}
-
-		h1 {
-			font-size: 3.1vw;
-		}
-
-		select, form, button, input {
-			font-size: 2.25vw;
-			color: #00003f;
-			font-family: Verdana;
-		}
-
+		<link href:"/main/Numeral-system-practice.github.io/numeral-system-practice.css">
 	</style>
 
 	</head>
