--- a/numeral-system-practice.html
+++ b/numeral-system-practice.html
@@ -3,7 +3,7 @@
 	<head>
 	<title>Hier kun je binaire, octale en hexadecimale getallen oefenen!</title>
 	<style>
-		<link href:"/main/Numeral-system-practice.github.io/numeral-system-practice.css">
+		<link href:"/main/numeral-system-practice.css">
 	</style>
 
 	</head>
