Getting the js and css in place...

--- a/numeral-system-practice.html
+++ b/numeral-system-practice.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Hier kun je binaire, octale en hexadecimale getallen oefenen!</title>
-	<style>
-		<link href:"/main/numeral-system-practice.css">
-	</style>
-
+		<title>Hier kun je binaire, octale en hexadecimale getallen oefenen!</title>
+		<link href="numeral-system-practice.css">
 	</head>
 
 	<body>
@@ -47,8 +44,6 @@
 		<h3 id="VraagNummer"></h3>
 		<input id="AntwoordInvoer" type="hidden" style="background-color: #6fffff;" onKeydown="Check(event);" required>
 
-		<script>
-			<link href:"main/numeral-system-practice.js">
-		</script>
+		<script src="numeral-system-practice.js"></script>
 	</body>
 </html>
